Fix horizontal scrollbar on fixed nav
medium breakpoints issue

--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -297,6 +297,7 @@ nav {
   // fixed width at larger breakpoints
   @include screen__md {
     overflow: auto;
+    overflow-x: hidden;
     width: auto;
     height: 100vh;
     padding-top: 10vh;
